[package]
name = "expense_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "expense_forecast"
path = "src/main.rs"

[lib]
name = "expense_forecast"
path = "src/lib.rs"

[dependencies]
readonly = "0.2.3"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
matches = "0.1.10"
mockall = "0.11.3"


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
